Safari365 Prod/src/objects/Lead_Nurture__c.object
<CustomObject>
    <fields>
        <fullName>Active_and_outdoor_adventure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active and outdoor adventure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beach_relaxation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach relaxation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Botswana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Botswana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Nurturing</relationshipLabel>
        <relationshipName>Lead_Nurturing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_to_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_residence__c</fullName>
        <label>Country of residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Dominica</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Gibraltar</fullName>
                </value>
                <value>
                    <fullName>Greenland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Korea, Republic of</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Liberia</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Mali</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Log_Date__c</fullName>
        <label>Email Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escalation_Speed__c</fullName>
        <label>Escalation Speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Slow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_and_Wine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food and Wine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_and_culture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History and culture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honeymoons_and_romance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honeymoons and romance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenya__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenya</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Nurture</label>
        <referenceTo>Lead_Nurture__c</referenceTo>
        <relationshipLabel>Lead Nurturing</relationshipLabel>
        <relationshipName>Lead_Nurturing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exists as Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Nurturing</relationshipLabel>
        <relationshipName>Lead_Nurturing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mozambique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mozambique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namibia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Namibia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewsLetterSent__c</fullName>
        <label>NewsLetterSent</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_NewsLetter_Date__c</fullName>
        <label>Next NewsLetter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Brochures__c</fullName>
        <label>Other Brochures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Interests__c</fullName>
        <label>Other Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Brochure__c</fullName>
        <label>Primary Brochure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rwanda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rwanda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>South_Africa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>South Africa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTRO</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EARLY</fullName>
                </value>
                <value>
                    <fullName>MID</fullName>
                </value>
                <value>
                    <fullName>LATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tanzania__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tanzania</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uganda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uganda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Victoria_Falls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victoria Falls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walking_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walking safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_origin__c</fullName>
        <label>Website origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web: safari365.com</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.com.au</fullName>
                </value>
                <value>
                    <fullName>Web: southafrica365.com</fullName>
                </value>
                <value>
                    <fullName>Web:safari365.com.tur.br</fullName>
                </value>
                <value>
                    <fullName>Web: top5africa.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wildlife_and_safari_experiences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wildlife and safari experiences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zambia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zambia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zanzibar_and_Pemba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zanzibar and Pemba</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Nurture</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Wildlife_and_safari_experiences__c</columns>
        <columns>Honeymoons_and_romance__c</columns>
        <columns>Family_safaris__c</columns>
        <columns>Food_and_Wine__c</columns>
        <columns>History_and_culture__c</columns>
        <columns>Walking_safaris__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Nurtured Leads</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{00000}</displayFormat>
        <label>Lead Nurture Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Nurturing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>